5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_2043.log
== TEST (2019-04-03 18:18:44) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
print(x,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:19:16) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:20:31) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=(p1+p2+p3+p4)
print(round(x,1))
-- OUTPUT:
32.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:20:44) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=(p1+p2+p3+p4)
print(round(x,1))
-- EXECUTION TIME:
0.2815
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
32.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
29.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:20:53) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=(p1+p2+p3+p4)
print(round(x,2))
-- OUTPUT:
32.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:21:06) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=(p1+p2+p3+p4)
print(round(x,2))
-- EXECUTION TIME:
0.195572
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
32.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
29.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:21:27) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=float(p1+p2+p3+p4)
print(round(x,2))
-- OUTPUT:
32.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:21:43) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=float(p1+p2+p3+p4)
print(round(x,2))
-- EXECUTION TIME:
0.13185
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
32.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
29.59
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:23:07) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=float(p1+p2+p3+p4)/(1+2+3+4)
print(round(x,2))
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:23:22) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=float(p1+p2+p3+p4)/(1+2+3+4)
print(round(x,2))
-- EXECUTION TIME:
0.124021
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
3.25
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.8
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.96
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:29:43) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=float(p1+(p2*2)+(p3*3)+(p4*4))/(1+2+3+4)
print(round(x,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:29:54) 
-- CODE:
p1=float(input("nota 1:"))
p2=float(input("nota 2:"))
p3=float(input("nota 3:"))
p4=float(input("nota 4:"))
x=float(p1+(p2*2)+(p3*3)+(p4*4))/(1+2+3+4)
print(round(x,2))
-- EXECUTION TIME:
0.197261
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
